syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.gcd";
option java_outer_classname = "GCDProto";
option objc_class_prefix = "GCD";

package pb;

message GenerateRequest {
    bytes attributes = 1;
}

message GenerateResponse {
    bytes result = 1;
}

message VerifyRequest {
    bytes proof = 1;
}

message VerifyResponse {
    bool result = 1;
}

service GCDService {
    rpc Generate (GenerateRequest) returns (GenerateResponse) {
    }
    rpc Verify (VerifyRequest) returns (VerifyResponse) {
    }
}